# ArxivArchive

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: arxiv-daily.yml
scripts/: getTodayPath.py  githubPublish.py
src/: __init__.py
src/ai/: ArxivAnalyzer.py  ArxivJudger.py  BaseAI.py
src/ai/prompts/: ArxivAnalyzerPrompt.py  JudgerPrompt.py  ResponseFormat.py
src/config/: Config.py
src/crawl/: ArxivDailyCrawlService.py  BaseCrawlService.py
src/crawl/model/: Arxiv.py
src/models/: Arxiv.py  Content.py
src/utils/: AggUtils.py
src/workflows/: ArxivDailyCombineWorkflow.py  ArxivDailyPublishWorkflow.py  ArxivDailyWorkflow.py
tests/: AIAnalyzeResultTest.py  AIAnalyzeTest.py  AnalyzeSourceTest.py  CombineWorkflowTest.py  ConfigTest.py  CrawlTest.py  DownloadTest.py  ExtractSourceTest.py  FullWorkflowTest.py  WorkflowTest.py  final_v0.1.md  publish.md
