[project]
name = "arxivarchive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "beautifulsoup4>=4.14.2",
    "httpx>=0.28.1",
    "langchain>=1.0.8",
    "langchain-openai>=1.0.3",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.2.250926",
    "pydantic>=2.12.4",
    "pymupdf>=1.26.6",
    "python-dotenv>=1.2.1",
    "tabulate>=0.9.0",
]
